# deepstream-face-recognition

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.jetson  FAISS.md  JETSON.md  README.md  TODO.md  consumer.py  deepstream-app.sh  docker-compose.yml  export_svg.py  format.sh  main.ipynb  requirements.txt
cmake/: FindGStreamer.cmake  FindJsonGlib.cmake  FindNVDS.cmake
samples/configs/: config_infer_primary.txt  config_infer_primary2.txt  config_infer_secondary_recognition.txt  config_infer_secondary_recognition2.txt  config_msgconv.txt  config_nvmsgbroker.txt  config_streammux.txt  deepstream_app.txt  deepstream_app_jetson.txt
scripts/: add_face_from_file.py  add_face_from_folder.py  face_alignment.py  face_detector.py  feature_extractor.py  onnx2tensorrt.py  onnx_clean.py  search_from_file.py  trt_inference.py  visualize.py
sources/: default.sh  install.sh  uninstall.sh
sources/gst-plugins/gst-dsexample/: Makefile  README  gstdsexample.cpp  gstdsexample.h  gstdsexample_optimized.cpp  gstdsexample_optimized.h
sources/gst-plugins/gst-nvdsaudiotemplate/: Makefile  README  gstnvdsaudiotemplate.cpp  gstnvdsaudiotemplate.h
sources/gst-plugins/gst-nvdsosd/: Makefile  README  gstnvdsosd.c  gstnvdsosd.h
sources/gst-plugins/gst-nvdspreprocess/: Makefile  README  config_preprocess.txt  gstnvdspreprocess.cpp  gstnvdspreprocess.h  gstnvdspreprocess_allocator.cpp  gstnvdspreprocess_allocator.h  nvdspreprocess_property_parser.cpp  nvdspreprocess_property_parser.h
sources/gst-plugins/gst-nvdsspeech/: README
sources/gst-plugins/gst-nvdstexttospeech/: README
sources/gst-plugins/gst-nvdsvideotemplate/: Makefile  README  gstnvdsvideotemplate.cpp  gstnvdsvideotemplate.h
sources/gst-plugins/gst-nvinfer/: Makefile  README  face_preprocess.h  gstnvinfer.cpp  (+11 more)
sources/includes/: INvDsAllocator.h  NvDsMemoryAllocator.h  gst-nvdssr.h  gst-nvevent.h  gst-nvmessage.h  gst-nvquery.h  gst_nvdsaudio.h  gstnvdsbufferpool.h  gstnvdsinfer.h  gstnvdsmeta.h  gstnvdsseimeta.h  nvbufaudio.h  nvbufsurface.h  nvbufsurftransform.h  nvds_analytics_meta.h  nvds_audio_meta.h  nvds_dewarper_meta.h  nvds_latency_meta.h  nvds_logger.h  nvds_mask_utils.h  nvds_msgapi.h  nvds_obj_encode.h  nvds_opticalflow_meta.h  nvds_roi_meta.h  nvds_tracker_meta.h  nvds_version.h  nvds_yml_parser.h  nvdscustomusermeta.h  nvdsdummyusermeta.h  nvdsgstutils.h  nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h  nvdsinfer_dbscan.h  nvdsinfer_logger.h  nvdsinfer_tlt.h  nvdsinferserver_common.proto  nvdsinferserver_config.proto  nvdsinferserver_plugin.proto  nvdsmeta.h  (+7 more)
sources2/: install.sh  uninstall.sh
(+270 files in other folders)
